What's New in Python 2.2.3 ?
Release date: XX-XXX-2003
============================

- Fix problem building on OSF1 because the compiler only accepted
  preprocessor directives that start in column 1.  (SF bug #691793.)

- Fixed two places in PyObject_Generic{Get,Set}Attr() where the
  tp_descr_{get,set} slot of a descriptor's type was accessed without
  checking tp_flags whether those slots actually exist.  This could
  cause segfaults in Zope.

- The imp module now has ways to acquire and release the "import
  lock": imp.acquire_lock() and imp.release_lock().  Note: this is a
  reentrant lock, so releasing the lock only truly releases it when
  this is the last release_lock() call.  You can check with
  imp.lock_held().  (SF bug #580952 and patch #683257.)

- Through a bytecode optimizer bug (and I bet you didn't even know
  Python *had* a bytecode optimizer :-), "unsigned" hex/oct constants
  with a leading minus sign would come out with the wrong sign.
  ("Unsigned" hex/oct constants are those with a face value in the
  range sys.maxint+1 through sys.maxint*2+1, inclusive; these have
  always been interpreted as negative numbers through sign folding.)
  E.g. 0xffffffff is -1, and -(0xffffffff) is 1, but -0xffffffff would
  come out as -4294967295.  This was the case in Python 2.2 through
  2.2.2 and 2.3a1, and in Python 2.4 it will once again have that
  value, but according to PEP 237 it really needs to be 1 in Python
  2.2.3 and 2.3.  (SF #660455)

- SF bug #678518:  fix some bugs in the parser module.  

- Bastion.py and rexec.py are disabled.  These modules are not safe in
  Python 2.2. or 2.3.

- SF #676155: fixed errors when trying to convert a long integer
  into a float which couldn't fit.

- SF #660476 and #513033: broken threadstate swap in readline could
  cause fatal errors when a readline hook was being invoked while a
  background thread was active.

- SF #623669: a class that inherits __rdiv__ (or another __r*__